--- a/fleet.yaml
+++ b/fleet.yaml
@@ -3,4 +3,4 @@ helm:
   # This allows one to download charts from most any location.  Also know that
   # go-getter URL supports adding a digest to validate the download. If repo
   # is set below this field is the name of the chart to lookup
-  chart: ./jobs
+  chart: ./job
